[package]
name = "rsa_encrypt_message"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sidefuzz = "0.1.1"
rsa = {version ="0.1.3", features = ["expose-internals"]}
rand = "0.5.6"
lazy_static = "1.3.0"
num-bigint-dig = "0.6.0"