[package]
name = "rsa_encrypt_message"
version = "0.1.0"
authors = ["phayes <patrick.d.hayes@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sidefuzz = "0.1.2"
rsa = {version ="0.2.0", features = ["expose-internals"]}
rand_chacha = "0.2.1"
lazy_static = "1.4.0"
num-bigint-dig = "0.6.1"